fix: remove a gap between boxes

--- a/contact/contact.css
+++ b/contact/contact.css
@@ -700,7 +700,6 @@ footer .copyright a {
         flex-direction: column;
         align-items: center;
         text-align: center;
-        gap: 20px;
         padding: 20px;
         margin: auto auto 80px auto;
     }
